--- a/Source/Medianizer/app/src/main/res/layout/activitry_movie.xml
+++ b/Source/Medianizer/app/src/main/res/layout/activitry_movie.xml
@@ -1,63 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MovieActivity"
-    android:background="@drawable/bg"
-    android:weightSum="1"
-    >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.karthik.medianizer.MovieActivity">
 
-    <TextView
-        android:layout_width="153dp"
-        android:layout_height="wrap_content"
-        android:text="Movie Name"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView4"
-        android:layout_weight="0.03"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Movie"
-        android:textSize="20dp"/>
-
-
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Genre"
-        android:id="@+id/textView5"
-        android:layout_weight="0.03"
-        android:textColor="@color/colorPrimaryDark"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-    <Spinner
-        android:id="@+id/Gname"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.06"
-        android:entries="@array/Gname_arrays"/>
+        android:id="@+id/scrollView" >
 
-    <Button
-        android:text="Button"
-        android:id="@+id/button5"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_width="190dp"
-        android:background="@drawable/dark"
-        android:layout_height="250dp" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="190dp"
-        android:layout_height="204dp"
-        android:id="@+id/button6"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/mission"/>
-
-
-</LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/movieLinearLayout"></LinearLayout>
+    </ScrollView>
+</RelativeLayout>
