--- a/Source/Medianizer/app/src/main/res/layout/activity_register.xml
+++ b/Source/Medianizer/app/src/main/res/layout/activity_register.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
     android:orientation="vertical"
-    android:background="@drawable/signup"
+
     android:clickable="true"
+    android:background="@drawable/abc"
+    android:alpha="0.9"
     >
 
+
     <TextView
-        android:layout_width="153dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REGISTRATION"
+        android:textColor="#FFFFFF"
+        android:id="@+id/textView"
+        android:layout_weight="0.03"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="120dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:id="@+id/textView4"
         android:layout_weight="0.03"
+
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/TFname"
-        android:layout_weight="0.08" />
+        android:textColor="#FFFFFF"
+        android:layout_weight="0.08"
+        android:backgroundTint="#FFFFFF"/>
+
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,21 +51,23 @@
         android:text="Email Address"
         android:id="@+id/textView5"
         android:layout_weight="0.03"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/TFemail"
-        android:layout_weight="0.03" />
+        android:layout_weight="0.03"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFFFFF"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
         android:id="@+id/textView6"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:layout_weight="0.03"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -51,15 +75,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/TFuname"
-        android:layout_weight="0.03" />
+        android:layout_weight="0.03"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFFFFF"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:id="@+id/textView7"
         android:layout_weight="0.03"
+
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
@@ -68,14 +95,16 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/TFpass1"
-        android:layout_weight="0.03" />
+        android:layout_weight="0.03"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFFFFF"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Confirm Password"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:id="@+id/textView8"
         android:layout_weight="0.03" />
 
@@ -85,28 +114,36 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/TFpass2"
-        android:layout_weight="0.03" />
+        android:layout_weight="0.03"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFFFFF"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Create an account"
         android:id="@+id/Bsignupbutton"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:layout_weight="0.03"
-        android:onClick="onSignUp" />
+        android:onClick="onSignUp"
+        android:background="#B03A2E"
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:text="Back"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.03"
         android:id="@+id/button3"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:onClick="onBack"
+        android:layout_marginTop="20dp"
+        android:background="#B03A2E"
         />
+
+
 
 
 </LinearLayout>
