--- a/Source/Medianizer/app/src/main/res/layout/activity_main.xml
+++ b/Source/Medianizer/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.karthik.medianizer.MainActivity"
+    tools:context=".MainActivity"
     android:background="#17202A">
 
     <TextView
@@ -63,3 +63,4 @@
 
 
 </RelativeLayout>
+
