--- a/Source/Medianizer/app/src/main/res/layout/activity_main2.xml
+++ b/Source/Medianizer/app/src/main/res/layout/activity_main2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.example.karthik.medianizer.MainActivity2"
+    tools:context=".MainActivity2"
     android:background="@drawable/abc">
 
 
@@ -91,3 +91,4 @@
         />
 
 </RelativeLayout>
+
