--- a/Source/Medianizer/app/src/main/res/layout/activity_register.xml
+++ b/Source/Medianizer/app/src/main/res/layout/activity_register.xml
@@ -10,6 +10,7 @@
     android:clickable="true"
     android:background="@drawable/abc"
     android:alpha="0.9"
+    tools:context=".RegActivity"
     >
 
 
